# kontracts

./: .gitignore  CHANGELOG.md  CLAUDE.md  CN_DOCUMENTATION_INDEX.md  CN_QUICK_REFERENCE.md  CN_SOURCE_COMPARISON.md  CRANK_NICOLSON_FORMULATION.md  CRANK_NICOLSON_REFERENCE.md  Cargo.toml  JALON_SKILL.md  LICENSE  PLAN_EXEMPLES.md  PROGRESS.md  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: .gitkeep  post-commit-auto-done.sh
.claude/skills/: jalon.sh
.github/workflows/: ci.yml  release.yml
benches/: pricing.rs
examples/: price_call.rs
examples/python/: README.md
examples/python/00_quickstart/: README.md  quickstart.py
examples/python/01_dsl_basics/: README.md  building_blocks.py  operators.py  serialization.py
examples/python/02_linear_derivatives/: README.md  bonds_annuities.py  forward_prepaid.py  futures_carry_dividends.py
examples/python/03_vanilla_options/: README.md  butterfly_condor.py  european_call_put.py  spreads_collar.py  straddle_strangle.py
examples/python/04_mc_engine/: README.md  mc_diagnostics.py  sobol_qmc.py  variance_reduction.py
examples/python/05_greeks/: README.md  greeks.py  greeks_scenario.py
examples/python/06_digitals_barriers/: README.md  barrier_rebate.py  digitals.py  double_barrier.py  knock_in_parity.py  knock_out.py
examples/python/07_path_dependent/: README.md  asian_fixed_strike.py  asian_floating_strike.py  asian_windowed.py  lookback_fixed.py  lookback_floating.py
examples/python/08_american_bermudan/: README.md  american_put_lsm.py  bermudan_put.py
examples/python/09_models/: README.md  heston.py  merton.py  model_comparison.py  rough_bergomi.py  sabr.py
examples/python/10_multi_asset/: README.md  basket.py  best_of_worst_of.py  outperformance.py  spread_margrabe.py
examples/python/11_rates/: README.md  coupon_bond.py  swaptions.py  zero_coupon_stochastic.py
examples/python/12_fx/: README.md  fx_options.py
examples/python/13_calibration/: README.md  fit_gbm_volatility.py  implied_vol.py
examples/python/14_structured_products/: README.md  autocallable.py  bonus_certificate.py  booster_note.py  capital_protected_note.py  corridor_note.py  discount_certificate.py  reverse_convertible.py  shark_note.py  twin_win.py
examples/python/15_portfolio_batch/: README.md  portfolio.py
python/kontract/: __init__.py  _kontract.pyi
python/tests/: test_advanced.py  test_bindings.py  test_temporal_basket.py
src/: ast.rs  backtest.rs  bindings.rs  calibration.rs  compiler.rs  error.rs  fx.rs  greeks.rs  lib.rs  lsm.rs  market_data.rs  mlmc.rs  multi_asset.rs  numerics.rs  observable.rs  optimizer.rs  pde.rs  pde_2d.rs  pricer.rs  products.rs  rates.rs  simulator.rs  sobol_simulator.rs  structured_products.rs  surface.rs  variance_reduction.rs
tests/: ast.rs  barriers.rs  compiler.rs  diagnostics.rs  dsl.rs  greeks.rs  j12_heston_dupire.rs  j13_sabr_merton.rs  j14_rough_bergomi.rs  j15_variance_reduction.rs  j16_quasi_mc.rs  j17_lsm.rs  j18_mlmc.rs  j21_fast_calibration.rs  j21_market_data.rs  j22_cmaes.rs  j23_backtest.rs  j24_stochastic_rates.rs  j25_fx.rs  j26_temporal_obs.rs  j27_basket.rs  j28_structured_products.rs  observable.rs  portfolio.rs  pricer.rs  products_validation.rs  properties.proptest-regressions  properties.rs  simulator.rs  surface.rs
