[package]
name = "kontract"
version = "0.1.0"
edition = "2021"
description = "Une algèbre des contrats financiers compositionnelle, pricée par Monte-Carlo."
license = "MIT"

[lib]
name = "kontract"
# rlib : utilisable comme crate Rust et testable.
# cdylib : produit le module natif importable depuis Python (PyO3).
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"   # RNG seedable et reproductible
thiserror = "1"

# Activé seulement lors du build du module Python (feature `python`).
[dependencies.pyo3]
version = "0.21"
features = ["extension-module"]
optional = true

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
approx = "0.5"      # comparaisons flottantes dans les tests
ndarray = "0.15"   # inspection des Array2 retournés par le simulateur
