[package]
name = "kontract"
version = "0.2.1"
edition = "2021"
description = "Une algèbre des contrats financiers compositionnelle, pricée par Monte-Carlo."
license = "MIT"
repository = "https://github.com/LePhilippeDucTai/kontracts"
homepage = "https://github.com/LePhilippeDucTai/kontracts"
readme = "README.md"
keywords = ["finance", "options", "monte-carlo", "pricing", "derivatives"]
categories = ["mathematics", "science", "simulation"]

[lib]
name = "kontract"
# rlib : utilisable comme crate Rust et testable.
# cdylib : produit le module natif importable depuis Python (PyO3).
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
# `float_roundtrip` : parsing f64 correctement arrondi → round-trip JSON exact
# de l'AST (invariant : AST pur et sérialisable sans perte).
serde_json = { version = "1", features = ["float_roundtrip"] }
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"   # RNG seedable et reproductible
thiserror = "1"

# Activé seulement lors du build du module Python (feature `python`).
[dependencies.pyo3]
version = "0.21"
# abi3-py39 : une seule wheel compatible CPython ≥ 3.9 (Stable ABI).
features = ["extension-module", "abi3-py39"]
optional = true

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
approx = "0.5"      # comparaisons flottantes dans les tests
ndarray = "0.15"   # inspection des Array2 retournés par le simulateur
proptest = "1"      # tests de propriété (invariants AST/pricer)
criterion = "0.5"   # benchmarks (batch pricing, calibration)

[[bench]]
name = "pricing"
harness = false

[profile.release]
lto = true           # Optimisation Link-Time (améliore les performances de 5-15%)
codegen-units = 1   # Compilation mono-thread pour meilleure optimisation
